package game;

public interface GameCreator {

    Game createBoard();

}
